[tests, windows] Fix test which was broken on Windows